fixed  text in the textareas is too long for a row, then the div for the syntax highlighting will be out of the scope of the form

--- a/src/main/webapp/resources/styles/RDFValidation.css
+++ b/src/main/webapp/resources/styles/RDFValidation.css
@@ -7,3 +7,6 @@ textarea {
 h3{
 	font-size: 1.2em;
 }
+fieldset{
+	max-width: 100%;
+}
